--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "nanoid": "^3.1.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-firebase-hooks": "^3.0.4",
     "react-hook-form": "^7.15.3",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
